# OS

kursach/: CMakeLists.txt  MKKAllocator.cpp  MKKAllocator.h  RMAllocator.cpp  RMAllocator.h  main.cpp
lab2/: CMakeLists.txt  lab2  lab2.c  lab2child  lab2child.c
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  lab4  lab4.c  lab4child  lab4child.c  test.txt
lab5/lab5dynamic/: CMakeLists.txt  instruction.txt  lab5  lab5dynamic.c  realization2.c
lab5/lab5static/: CMakeLists.txt  instruction.txt  lab5  lab5static.c  realization1.c  realization2.c
lab68/: IpPortDealer.cpp  IpPortDealer.h  README.txt  TopNode.cpp  TopNode.h  WorkingNode.cpp  WorkingNode.h  ZmqStream.cpp  ZmqStream.h  execute.cpp  execute.h  main  main.cpp  node  node.cpp
